--- a/k8s-practices/stateful-app/kustomization.yaml
+++ b/k8s-practices/stateful-app/kustomization.yaml
@@ -1,4 +1,7 @@
 secretGenerator:
+- name: mysql-pass
+  literals:
+  - password=bXlzcWwtcGFzcw==
 resources:
     - mysql-deployment.yaml
     - wordpress-deployment.yaml
