--- a/k8s-practices/stateful-app/wordpress-deployment.yaml
+++ b/k8s-practices/stateful-app/wordpress-deployment.yaml
@@ -25,7 +25,7 @@ spec:
     requests:
       storage: 20Gi
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: wordpress
@@ -54,7 +54,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mysql-pass
-              key: 123456
+              key: password
         ports:
         - containerPort: 80
           name: wordpress
